[gd_scene load_steps=7 format=3 uid="uid://ce0ehfno5oemd"]

[ext_resource type="PackedScene" uid="uid://dmlpki78nue5y" path="res://heroes/hero_cosmetics.tscn" id="1_1iyqo"]
[ext_resource type="Script" path="res://heroes/survival_hero.gd" id="1_n1hig"]
[ext_resource type="PackedScene" uid="uid://bflrqji1yudcy" path="res://components/health_component.tscn" id="3_vc16f"]
[ext_resource type="PackedScene" uid="uid://dek1364s65d8f" path="res://components/hitbox_component.tscn" id="4_dym87"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5m80h"]
radius = 207.0
height = 576.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ddhir"]
radius = 174.0
height = 580.0

[node name="SurvivalHero" type="CharacterBody2D"]
collision_mask = 12
script = ExtResource("1_n1hig")

[node name="HeroCosmetics" parent="." instance=ExtResource("1_1iyqo")]
unique_name_in_owner = true
position = Vector2(11, -23)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5m80h")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("3_vc16f")]
unique_name_in_owner = true

[node name="HitboxComponent" parent="." instance=ExtResource("4_dym87")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_ddhir")
debug_color = Color(0.954313, 0.21537, 0, 0.42)

[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="got_hit" from="HitboxComponent" to="." method="_on_hitbox_component_got_hit"]
